--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,7 @@ jobs:
     runs-on: namespace-profile-builder
     steps:
     - name: Checkout kernel source
-      uses: actions/checkout@v4
-      with:
-        submodules: 'true'
+      run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
     - name: Install Dependencies
       run: sudo apt-get update && sudo apt-get install -y bison build-essential bc bison curl libssl-dev git zip python3 flex cpio libncurses5-dev wget default-jre 
 
