--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,16 @@ jobs:
     - name: Checkout kernel source
       run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
     - name: Install Dependencies
-      run: sudo apt-get update && sudo apt-get install -y bison build-essential bc bison curl libssl-dev git zip python3 flex cpio libncurses5-dev wget default-jre 
+      run: sudo apt-get update && sudo apt-get install -y bison build-essential bc bison curl libssl-dev git zip python3 ccache flex cpio libncurses5-dev wget default-jre 
 
     - name: Whyred kernel build
-      run: ./build.sh whyred 
+      run: ./build.sh whyred ccache
 
     - name: Upload whyred kernel build
-      run:  curl --upload-file out/arch/arm64/boot/Image.gz-dtb https://transfer.sh && make mrproper
+      run:  curl --upload-file out/arch/arm64/boot/Image.gz-dtb https://free.keep.sh && make mrproper
 
     - name: Tulip kernel build
-      run: ./build.sh tulip 
+      run: ./build.sh tulip ccache
 
     - name: Upload tulip kernel build
-      run:  curl --upload-file out/arch/arm64/boot/Image.gz-dtb https://transfer.sh
+      run:  curl --upload-file out/arch/arm64/boot/Image.gz-dtb https://free.keep.sh
