--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
     - name: Checkout kernel source
       run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
     - name: Install Dependencies
       run: sudo apt-get update && sudo apt-get install -y bison build-essential bc bison curl libssl-dev git zip python3 ccache flex cpio libncurses5-dev wget default-jre 
 
@@ -21,3 +23,6 @@ jobs:
 
     - name: Upload tulip kernel build
       run:  curl --upload-file out/arch/arm64/boot/Image.gz-dtb https://free.keep.sh
+          
+
+      
