--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: namespace-profile-builder
     steps:
     - name: Checkout kernel source
-      run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging-docker --depth=1 ./
+      run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
     - name: Install Dependencies
