--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build Kernel
 on: workflow_dispatch
 jobs:
   build:
-    runs-on: namespace-profile-builder
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout kernel source
       run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
