--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      SCCACHE_GHA_ENABLED: "true"
     steps:
     - name: Checkout kernel source
       run: git clone https://github.com/Whyred-Dynamic-Development/san_kernel_sdm660_4 -b staging --depth=1 ./
-    - name: ccache
-      uses: hendrikmuhs/ccache-action@v1.2
+    - name: Run sccache-cache
+      uses: mozilla-actions/sccache-action@v0.0.3
     - name: Install Dependencies
       run: sudo apt-get update && sudo apt-get install -y bison build-essential bc bison curl libssl-dev git zip python3 ccache flex cpio libncurses5-dev wget default-jre 
 
